fixing smaller screen size alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,11 @@ body {
   min-height: 100vh;
 }
 
-/* remove display flex here if trouble with positioning throughout site. */
 .page {
   flex: 1;
   min-height: 63vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
+
 
 /* #footer-comp {
   position: fixed;
@@ -31,3 +28,4 @@ body {
 .portfolio {
   background-color: var(--bgrnd);
 }
+
